# hpass

./: .gitignore  LICENSE  Makefile  README.md  hpass.cabal  stack.yaml
.circleci/: config.yml
app/: Main.hs
src/: BrickUi.hs  Controller.hs  CreateNew.hs  Crypto.hs  Lib.hs  UI.hs
test/: Spec.hs
