cabal-version:       2.2
name:                hpass
version:             0.1.5.6
-- synopsis:
-- description:
homepage:            https://github.com/andrevdm/hpass#readme
license:             BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2017-2018 Andre Van Der Merwe
category:            Application
build-type:          Simple
extra-source-files:  README.md

library
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , BrickUi
                     , Controller
                     , CreateNew
                     , Crypto
  build-depends:       base >= 4.10.1.0 && < 5
                     , protolude
                     , text
                     , containers
                     , brick
                     , mtl
                     , transformers
                     , composition-extra
                     , free
                     , safe-exceptions
                     , filepath
                     , directory
                     , vty
                     , vector
                     , process
                     , free
                     , lens
                     , data-clist
                     , cryptonite
                     , bytestring
                     , time
  default-language:    Haskell2010

executable hpass
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  build-depends:       base
                     , hpass
                     , protolude
                     , text
                     , containers
                     , brick
  default-language:    Haskell2010

test-suite hpass-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hpass
                     , protolude
                     , text
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevdm/hpass
